[package]
name = "celestia-search-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde      = { version = "1.0", features = ["derive"] }
rig-core   = "0.1.0"
tokio      = { version = "1.34.0", features = ["full"] }
reqwest    = { version = "0.12", features = ["json"] }
dotenv     = "0.15"
thiserror  = "1.0"
